--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài 1 |  Lab 13</title>
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
     <h2>Ngành CNTT (Information technology)</h2>
@@ -16,6 +17,16 @@
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v13.0&appId=276778414527444&autoLogAppEvents=1" nonce="oLDaWn67"></script>
 <div class="fb-comments" data-href="https://poly.edu.vn" data-width="" data-numposts="1"></div><br>
 <div class="fb-like" data-href="https://poly.edu.vn" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+
+
+<div class="video">
+    <iframe width="681" height="383" src="https://www.youtube.com/embed/P9c-gQiie0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>  
+
+<iframe src="https://www.google.com/maps/d/embed?mid=17PWtCSnF8QtewAG5oOsmmdytQqf1qFEH&ehbc=2E312F" width="640" height="480"></iframe>
+
+<script src="https://uhchat.net/code.php?f=db5343"></script>
+
 
 </body>
 </html>
